# OXiGen

./: .gitignore  CMakeLists.txt  README.md
include/: AnalysisManager.h  DFGConstructor.h  DFGStreamsOverlapHandler.h  DFGTranslator.h  LoopReplicationManager.h  OXiGenPass.h  OffsetVectorizationData.h  OxigenGenVectorizedPass.h  OxigenVectorizationPass.h  OxigenVectorizationUnroll.h  ProcessingComponent.h  ProcessingScheduler.h  ResourceEstimationModule.h  StreamsAnalyzer.h  SubloopHandler.h
include/DFG/: DFGManager.h  Nodes.h
include/OXiGen/: OXiGenPass.h
include/Utils/: IOStreams.h
resources/: MaxJFunctions.h  MaxJOXiGenFunctions.txt  aopKernel.txt  cfg.Ncdf.dot  cfg.abs.dot  cfg.acc_test.dot  cfg.acc_test_2.dot  cfg.averageKernel.dot  cfg.ceil.dot  cfg.cond_test.dot  cfg.counter_test.dot  cfg.exp.dot  cfg.fabs.dot  cfg.floor.dot  cfg.func_test.dot  cfg.log.dot  cfg.log2.dot  cfg.mov_avg.dot  cfg.nested_test_1.dot  cfg.newton_raphson.dot  cfg.pow2.dot  cfg.sqrt.dot  cfg.test_1.dot  cfg.test_10.dot  cfg.test_2.dot  cfg.test_3.dot  cfg.test_4.dot  cfg.test_5.dot  cfg.test_6.dot  cfg.test_7.dot  cfg.test_8.dot  cfg.test_9.dot  cfg.test_cast.dot  cfg.two_d_test.dot  cfg.two_loops.dot  cfg.unroll_test.dot  circle.ll  f_loop.c  f_loop.ll  grav.c  (+14 more)
resources/asian-option-pricing/: aop.c  aop.ll  aop_opt.ll  (+13 more)
src/: .OXiGenPass.cpp.swp  AnalysisManager.cpp  CMakeLists.txt  DFGConstructor.cpp  DFGManager.cpp  DFGStreamsOverlapHandler.cpp  DFGTranslator.cpp  File  Hello.cpp  LoopRepliactionManager.cpp  Nodes.cpp  OXiGenPass.cpp  OxigenGenVectorizedPass.cpp  OxigenVectorizationPass.cpp  OxigenVectorizationUnroll.cpp  ProcessingScheduler.cpp  ResourceEstimationModule.cpp  StreamsAnalyzer.cpp  SubloopHandler.cpp  cmake_install.cmake  main.cpp
test/: CMakeLists.txt
test/boostTests/: boostTest.cpp
test/dfgConstructorTests/: dfgConstructorTestSample.cpp
test/streamAnalyzerTests/: streamsAnalyzerTest.cpp
(+53 files in other folders)
